--- a/package.json
+++ b/package.json
@@ -17,14 +17,13 @@
     "react-hook-form": "^7.42.1",
     "react-native": "0.70.5",
     "react-native-svg": "13.4.0",
-    "react-native-web": "~0.18.9"
+    "react-native-web": "~0.18.9",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
-    "react-native-svg-transformer": "^1.0.0",
-    "typescript": "^4.6.3"
+    "react-native-svg-transformer": "^1.0.0"
   },
   "private": true
 }
